<resources>
    <string name="app_name">Calculadora</string>
    <string name="resultado">Resultado:</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="numero1">Digite un numero</string>
    <string name="calcular">Calcular</string>
    <string name="potencia">Potencia</string>
    <string name="regresar">Menu</string>
    <string name="bienvenida">¡Bienvenido!</string>
    <string name="primera_opcion">1. Multiplicación.</string>
    <string name="segunda_opcion">2. Fibonacci.</string>
    <string name="tercera_opcion">3. Potencia.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>